sort.baseball.lessons.sort.baseball.NaiveBaseball.scala.error
NaiveBaseball:12: error: value ==- is not a member of Int
    if(baseBouger==-1) baseBouger=nbBase
                 ^